# fft_accelerator

./: CMakeLists.txt  LICENSE  README.md
include/: fft_accelerator.h  pal_uart.h  uart.h
src/: fft_accelerator.c  uart.c
